--- a/css/main.css
+++ b/css/main.css
@@ -17,3 +17,13 @@
     text-transform: uppercase;
     letter-spacing: 1px;
 }
+
+#totals {
+    float: left;
+    width: 20%;
+}
+
+#tweets {
+    float: left;
+    width: 80%;
+}
