--- a/css/main.css
+++ b/css/main.css
@@ -37,3 +37,12 @@ nav {
     opacity: 0;
 }
 
+.search-container button {
+    padding: 0.5em;
+    width: 20%;
+}
+
+.search-container input {
+    padding: 0.5em;
+    width: 76%;
+}
