--- a/css/main.css
+++ b/css/main.css
@@ -63,3 +63,48 @@ nav {
 .tweet-filter {
     margin-left: 1em;
 }
+
+.latest-tweet {
+    margin: 1em 0 1em 0;
+    background-color: white;
+    border: 1px solid #f5f5f5;
+    border-radius: 1em;
+}
+
+.latest-tweet__user {
+    display: table-cell;
+    padding: 1em 0 1em 1em;
+    text-align: center;
+}
+
+.latest-tweet__user__image {
+    width: 2em;
+    height: 2em;
+    clear: both;
+    border: 1px solid #ccc;
+    padding: 0.2em;
+    border-radius: 0.5em;
+    margin: 0.2em 0 0 0;
+}
+
+.latest-tweet__text {
+    display: table-cell;
+}
+
+.latest-tweet__text__sentiment {
+    float: left;
+    margin: 0.2em 1em 0 0;
+    padding: 0;
+    width: 1em;
+    height: 1em;
+    border-radius: 50%;
+}
+
+.latest-tweet__text__username {
+    font-weight: bold;
+}
+
+.latest-tweet__text p {
+    color: #222;
+    padding: 1em;
+}
