Updated tweet list filter styles.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,6 @@
 // Modules
 @import "modules/nav";
 @import "modules/search";
-@import "modules/tweets";
+@import "modules/tweet-list";
 @import "modules/latest-tweets";
 @import "modules/filters";
