Added sentiment color styles to SASS.

--- a/scss/modules/filters.scss
+++ b/scss/modules/filters.scss
@@ -1,3 +1,21 @@
 .tweet-filter {
+
   margin-left: 1em;
+
+  .positive {
+    background-color: $color-positive;
+  }
+
+  .negative {
+    background-color: $color-negative;
+  }
+
+  .mixed {
+    background-color: $color-mixed;
+  }
+
+  .disabled {
+    background-color: $color-disabled;
+  }
+
 }
