Added missing neutral css selectors.

--- a/scss/modules/tweet-list.scss
+++ b/scss/modules/tweet-list.scss
@@ -12,6 +12,10 @@
     background-color: $color-negative;
   }
 
+  .neutral {
+    background-color: $color-neutral;
+  }
+
   .mixed {
     background-color: $color-mixed;
   }
